--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/ssr": "latest",
+    "@supabase/supabase-js": "latest",
     "@tailwindcss/postcss": "^4.0.9",
     "next": "15.2.0",
     "postcss": "^8.5.3",
